--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   get: ^4.6.5
   hive_flutter: ^1.1.0
   dio: ^5.1.0
+  pretty_dio_logger: ^1.3.1
+  dio_smart_retry: ^5.0.0
 
 dev_dependencies:
   flutter_test:
