--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.1.0
   pretty_dio_logger: ^1.3.1
   dio_smart_retry: ^5.0.0
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
