--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   dio_smart_retry: ^5.0.0
   pull_to_refresh: ^2.0.0
+  webview_flutter: ^4.0.7
 
 dev_dependencies:
   flutter_test:
