--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,16 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   hive_flutter: ^1.1.0
-  dio: ^5.1.0
-  pretty_dio_logger: ^1.3.1
   dio_smart_retry: ^5.0.0
   pull_to_refresh: ^2.0.0
   webview_flutter: ^4.0.7
   flutter_native_splash: ^2.2.19
+  dio_cache_interceptor_hive_store: ^3.2.1
+  dio_cache_interceptor: ^3.4.1
+  path_provider: ^2.0.14
+  flutter_nb_net: ^0.0.5
+  dio_cookie_manager: ^2.1.3
+  cookie_jar: ^3.0.1
 
 dev_dependencies:
   flutter_test:
