--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_nb_net: ^0.0.5
   dio_cookie_manager: ^2.1.3
   cookie_jar: ^3.0.1
+  loading_indicator: ^3.1.0
+  like_button: ^2.0.5
 
 dev_dependencies:
   flutter_test:
